--- a/Downscaling.Rmd
+++ b/Downscaling.Rmd
@@ -6,6 +6,9 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+## Setup
+Load packages necessary for analysis.
 ```{r}
 library(raster)
 library(rasterVis)
@@ -16,9 +19,47 @@ library(parallel)
 ```
 
 
-## Downscaling
+## Input Data
+### Topography
+First define a bounding box for the study area.
+```{r}
+bbox <- extent(-10, 20, 28, 38)
+```
 
-Interpolate climate data using splines.
+Import the 1km SRTM DEM and crop to study area.
+```{r}
+elev1k <- raster('~/gdrive/Data/SRTM_1km.tif') %>% crop(bbox)
+```
+
+Generate a mask to get rid of Sicily and Spain.
+```{r}
+na.mask <- elev1k %>% aggregate(fact = 5) %>% clump %>% mask(., ., maskvalue = 7, inverse = T) %>% aggregate(fact = 2)
+```
+
+Resample the elevation map to 5', use the 1km and 5' elevation data to generate a series of topographic derivatives.
+```{r}
+elev <- resample(elev1k, na.mask) %>% mask(na.mask)
+
+rough <- terrain(elev, opt = 'roughness')
+
+dco <- elev %>%
+  reclassify(c(-Inf, Inf, NA, NA, NA, 1)) %>% # reverse NA and non-NA cells
+  distance(doEdge = T) %>% # calculate the distances
+  mask(elev) %>% # mask out ocean cells  
+  `/`(1000) # convert to km
+
+#the following two maps will be used for wind calculations, so reproject to LCC to preserve angles.
+aspect <- elev  %>% terrain(opt='aspect', unit = 'degrees') %>% projectRaster(crs = "+proj=lcc")
+
+slope <- elev1k %>%
+  terrain(opt = 'slope', unit = 'degrees') %>% 
+  aggregate(fact = 10, fun = median) %>% 
+  mask(na.mask) %>% 
+  projectRaster(crs = "+proj=lcc") 
+```
+
+
+Create a function to interpolate the coarse resolution GCM data using splines.
 ```{r warnings = F}
 tpsInterp <- function(rast.brick){
   target <- resample(rast.brick[[1]], prec.obs[[1]])
@@ -34,33 +75,13 @@ tpsInterp <- function(rast.brick){
 
 ```
 
-```{r}
-bbox <- extent(-10, 20, 28, 38)
 
-elev1k <- raster('~/gdrive/Data/SRTM_1km.tif') %>% crop(bbox)
-
-na.mask <- elev1k %>% aggregate(fact = 5) %>% clump %>% mask(., ., maskvalue = 7, inverse = T) %>% aggregate(fact = 2)
-```
 
 ```{r}
 prec.obs <- brick('Data/CHELSA/prec.nc') %>% crop(bbox) %>% mask(na.mask)
-elev <- resample(elev1k, prec.obs) %>% mask(na.mask)
-dco <- elev %>%
-  reclassify(c(-Inf, Inf, NA, NA, NA, 1)) %>% # reverse NA and non-NA cells
-  distance(doEdge = T) %>% # calculate the distances
-  mask(elev) %>% # mask out ocean cells  
-  `/`(1000) # convert to km
-aspect <- elev  %>% terrain(opt='aspect', unit = 'degrees') %>% projectRaster(crs = "+proj=lcc")
+tmp.obs <- brick('Data/CHELSA/temp.nc') %>% crop(bbox) %>% mask(na.mask)
+  plot(tmp.obs)
 
-slope <- elev1k %>%
-  terrain(opt = 'slope', unit = 'degrees') %>% 
-  aggregate(fact = 10, fun = median) %>% 
-  mask(na.mask) %>% 
-  projectRaster(crs = "+proj=lcc") 
-
-levelplot(brick(aspect,aspect1))
-
-rough <- terrain(elev, opt = 'roughness')
 
 trefht <- brick()
 
